			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: index/1 didn't clean hash-info.   Samer Abdallah.

  * FIXED: Bug#264: Typing.  Keri Harris.

  * PORT: patch to use libc's syscall(__NR_gettid).  Keri Harris.

  * FIXED: Bug#259: location indication in GUI tracer on Windows.

  * FIXED: Reporting stream-errors in non-Windows platforms.

  * FIXED: Some issues concerning integer rounding.  MODIFIED: arithmetic
    no longer silently converts floats to ints at some places.  Stricter
    compliance to the standard.  Richard O'Keefe.


==================================
VERSION 5.6.29 (February 26, 2007)
==================================

  * FIXED: Bug#258: set_prolog_IO/3 can trap assertion failure.  Keri
    Harris.

  * FIXED: Windows version of open(pipe(Command), ...).  Was leaking memory
    and handles.

  * FIXED: Possible stream lock underrun in at_end_of_stream/1 if there
    are errors.

  * FIXED: Possibly incorrect call to foreign cleanup handler after
    a signalled exception (timeout, thread_signal).

  * FIXED: Possible memory corruption in quick-load-file/saved-state
    handling.  Mike Elston.

  * FIXED: Possible assertion failure in pl-stream.c.  Jochem Liem.

  * FIXED: Stream re-positioning bug.  Mostly affects Windows, but
    also other systems when using variable-length multi-byte encoding
    such as UTF-8.  Jeff Rose.

  * PORT: Missing errno.h in pl-text.c.  Keri Harris.

  * PORT: A few minor POSIX compliance enhancements.  Richard O'Keefe.

  * FIXED: Allow for goal_expansion in clauses with source-location.
    Tom Schrijvers.

  * FIXED: set_stream_position/2.   Sergey Tikhonov.

  * FIXED: Errornous translation of p --> { _ = 123 }.   Alexey Ilyukhin.
